--- a/src/app/public/pages/page-not-found/page-not-found.component.html
+++ b/src/app/public/pages/page-not-found/page-not-found.component.html
@@ -1,1 +1,5 @@
-<p>page-not-found works!</p>
+<div class="not-found">
+  <h1>Página no encontrada</h1>
+  <p>Lo sentimos, la ruta '{{notFoundUrl}}' no existe.</p>
+  <button mat-flat-button color="primary" routerLink="/home">Retornar a Home</button>
+</div>
